# ragonomics

./: README.md  compose.yml  pyproject.toml
deploy/: README.md
docs/: architecture.md
docs/architecture/: architecture.md  workflow_architecture.md
docs/configuration/: configuration.md
docs/deployment/: cloud.md
docs/guides/: agentic.md  ui.md  workflow.md
ragonometrics/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  crossref_cache.py  entrypoints.py  eval.py  indexer.py  io_loaders.py  logging_utils.py  main.py  manifest.py  metadata.py  migrate.py  pipeline.py  prompts.py  query_cache.py  retriever.py  rq_queue.py  streamlit_app.py  sweep.py  token_usage.py
ragonometrics/cli/: __init__.py  cli.py  entrypoints.py
ragonometrics/core/: __init__.py  config.py  io_loaders.py  logging_utils.py  main.py  prompts.py
ragonometrics/eval/: __init__.py  benchmark.py  eval.py  sweep.py
ragonometrics/indexing/: __init__.py  indexer.py  manifest.py  metadata.py  migrate.py  retriever.py
reports/: prep-manifest-29fd6dd9d4454eeda6bc5f81ccfc4db0.json  prep-manifest-a90f9ab7596a4c50b694a20fc8f47cbf.json  prep-manifest-d355a49e588847e4b0453eba27692984.json  workflow-report-29fd6dd9d4454eeda6bc5f81ccfc4db0.json  workflow-report-a90f9ab7596a4c50b694a20fc8f47cbf.json  workflow-report-d355a49e588847e4b0453eba27692984.json
tests/: conftest.py  test_config.py  test_eval.py  test_manifest.py  test_metadata.py  test_query_cache.py  test_retrieval_quality.py  test_retriever.py  test_top_k_context.py  test_utils.py
tools/: benchmark.py
(+14 files in other folders)
